Update and rename indextest.html to index.html

--- a/index.html
+++ b/index.html
@@ -2007,7 +2007,7 @@ nav {
             <!-- Member 1 -->
             <div class="team-member">
                 <div class="member-img">
-                    <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Marco Vitali">
+                    <img src="1n.jpg" alt="1n">
                 </div>
                 <h3 class="member-name">Zeeshan Ali</h3>
                 <p class="member-role">Founder & Executive Chef</p>
@@ -2030,7 +2030,7 @@ nav {
             <!-- Member 2 -->
             <div class="team-member">
                 <div class="member-img">
-                    <img src="https://randomuser.me/api/portraits/women/44.jpg" alt="Sophie Chen">
+                    <img src="2n.jpg" alt="2n">
                 </div>
                 <h3 class="member-name">Mirza Farhan</h3>
                 <p class="member-role">Head of Recipe Development</p>
@@ -2053,7 +2053,7 @@ nav {
             <!-- Member 3 -->
             <div class="team-member">
                 <div class="member-img">
-                    <img src="https://randomuser.me/api/portraits/men/75.jpg" alt="David Müller">
+                    <img src="32n.jpg" alt="32n">
                 </div>
                 <h3 class="member-name">Hamza Rasheed</h3>
                 <p class="member-role">Food Scientist</p>
@@ -2076,7 +2076,7 @@ nav {
             <!-- Member 4 -->
             <div class="team-member">
                 <div class="member-img">
-                    <img src="https://randomuser.me/api/portraits/women/68.jpg" alt="Priya Patel">
+                    <img src="4n.jpg" alt="4n">
                 </div>
                 <h3 class="member-name">Usman Maqbool</h3>
                 <p class="member-role">Pastry Chef</p>
@@ -2099,7 +2099,7 @@ nav {
             <!-- Member 5 (New) -->
             <div class="team-member">
                 <div class="member-img">
-                    <img src="https://randomuser.me/api/portraits/men/45.jpg" alt="James Wilson">
+                    <img src="5n.jpg" alt="5n">
                 </div>
                 <h3 class="member-name">Nadeem Iqbal</h3>
                 <p class="member-role">Mixology Expert</p>
@@ -2122,7 +2122,7 @@ nav {
             <!-- Member 6 (New) -->
             <div class="team-member">
                 <div class="member-img">
-                    <img src="https://randomuser.me/api/portraits/women/33.jpg" alt="Elena Rodriguez">
+                    <img src="6n.jpg" alt="6n">
                 </div>
                 <h3 class="member-name">Mahmood Butt</h3>
                 <p class="member-role">Sustainability Director</p>
@@ -2145,7 +2145,7 @@ nav {
             <!-- Member 7 (New) -->
             <div class="team-member">
                 <div class="member-img">
-                    <img src="https://randomuser.me/api/portraits/men/82.jpg" alt="Thomas Kim">
+                    <img src="7n.jpg" alt="7n">
                 </div>
                 <h3 class="member-name">Hayyan Gill</h3>
                 <p class="member-role">Creative Director</p>
@@ -2395,7 +2395,7 @@ nav {
         requiredIngredients: ["chicken", "tomatoes", "ginger garlic paste"],
         instructions: [
             "Heat oil in karahi, add chicken and brown",
-            "Add ginger-garlic paste and sauté",
+            "Add ginger-garlic paste and sautÃ©",
             "Add spices and tomatoes, cook until oil separates",
             "Add green chilies and simmer for 10 minutes",
             "Garnish with fresh coriander and serve"
@@ -2449,7 +2449,7 @@ nav {
         ingredients: ["chickpeas", "tomatoes", "onions", "ginger garlic paste", "cumin", "coriander", "turmeric", "garam masala"],
         requiredIngredients: ["chickpeas", "tomatoes"],
         instructions: [
-            "Sauté onions, ginger-garlic paste",
+            "SautÃ© onions, ginger-garlic paste",
             "Add spices and tomatoes",
             "Add chickpeas and simmer",
             "Finish with garam masala"
@@ -2504,7 +2504,7 @@ nav {
         requiredIngredients: ["spinach", "mustard greens"],
         instructions: [
             "Boil greens until tender",
-            "Sauté onions and spices",
+            "SautÃ© onions and spices",
             "Combine and simmer",
             "Add cornmeal for thickness"
         ],
@@ -2757,7 +2757,7 @@ nav {
         requiredIngredients: ["eggplant", "tomatoes"],
         instructions: [
             "Roast eggplant until charred",
-            "Sauté onions, ginger-garlic and spices",
+            "SautÃ© onions, ginger-garlic and spices",
             "Add tomatoes and mashed eggplant",
             "Cook until flavors blend"
         ],
