--- a/index.html
+++ b/index.html
@@ -2007,7 +2007,7 @@ nav {
             <!-- Member 1 -->
             <div class="team-member">
                 <div class="member-img">
-                    <img src="1n.jpg" alt="1n">
+                    <img src="./images/1n.jpg" alt="1n">
                 </div>
                 <h3 class="member-name">Zeeshan Ali</h3>
                 <p class="member-role">Founder & Executive Chef</p>
@@ -2030,7 +2030,7 @@ nav {
             <!-- Member 2 -->
             <div class="team-member">
                 <div class="member-img">
-                    <img src="2n.jpg" alt="2n">
+                    <img src="./images/2n.jpg" alt="2n">
                 </div>
                 <h3 class="member-name">Mirza Farhan</h3>
                 <p class="member-role">Head of Recipe Development</p>
@@ -2053,7 +2053,7 @@ nav {
             <!-- Member 3 -->
             <div class="team-member">
                 <div class="member-img">
-                    <img src="32n.jpg" alt="32n">
+                    <img src="./images/32n.jpg" alt="32n">
                 </div>
                 <h3 class="member-name">Hamza Rasheed</h3>
                 <p class="member-role">Food Scientist</p>
@@ -2076,7 +2076,7 @@ nav {
             <!-- Member 4 -->
             <div class="team-member">
                 <div class="member-img">
-                    <img src="4n.jpg" alt="4n">
+                    <img src="./images/4n.jpg" alt="4n">
                 </div>
                 <h3 class="member-name">Usman Maqbool</h3>
                 <p class="member-role">Pastry Chef</p>
@@ -2099,7 +2099,7 @@ nav {
             <!-- Member 5 (New) -->
             <div class="team-member">
                 <div class="member-img">
-                    <img src="5n.jpg" alt="5n">
+                    <img src="./images/5n.jpg" alt="5n">
                 </div>
                 <h3 class="member-name">Nadeem Iqbal</h3>
                 <p class="member-role">Mixology Expert</p>
@@ -2122,7 +2122,7 @@ nav {
             <!-- Member 6 (New) -->
             <div class="team-member">
                 <div class="member-img">
-                    <img src="6n.jpg" alt="6n">
+                    <img src="./images/6n.jpg" alt="6n">
                 </div>
                 <h3 class="member-name">Mahmood Butt</h3>
                 <p class="member-role">Sustainability Director</p>
@@ -2145,7 +2145,7 @@ nav {
             <!-- Member 7 (New) -->
             <div class="team-member">
                 <div class="member-img">
-                    <img src="7n.jpg" alt="7n">
+                    <img src="./images/7n.jpg" alt="7n">
                 </div>
                 <h3 class="member-name">Hayyan Gill</h3>
                 <p class="member-role">Creative Director</p>
